// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/popconfirm/demo/async.tsx correctly 1`] = `
<button
  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
  type="button"
>
  <span>
    Open Popconfirm with async logic
  </span>
</button>
`;

exports[`renders components/popconfirm/demo/basic.tsx correctly 1`] = `
<button
  class="g-btn css-var-test-id g-btn-default g-btn-dangerous g-btn-color-dangerous g-btn-varig-outlined"
  type="button"
>
  <span>
    Delete
  </span>
</button>
`;

exports[`renders components/popconfirm/demo/dynamic-trigger.tsx correctly 1`] = `
<div>
  <button
    class="g-btn css-var-test-id g-btn-default g-btn-dangerous g-btn-color-dangerous g-btn-varig-outlined"
    type="button"
  >
    <span>
      Delete a task
    </span>
  </button>
  <br />
  <br />
  Whether directly execute：
  <button
    aria-checked="true"
    class="g-switch css-var-test-id g-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="g-switch-handle"
    />
    <span
      class="g-switch-inner"
    >
      <span
        class="g-switch-inner-checked"
      />
      <span
        class="g-switch-inner-unchecked"
      />
    </span>
  </button>
</div>
`;

exports[`renders components/popconfirm/demo/icon.tsx correctly 1`] = `
<button
  class="g-btn css-var-test-id g-btn-default g-btn-dangerous g-btn-color-dangerous g-btn-varig-outlined"
  type="button"
>
  <span>
    Delete
  </span>
</button>
`;

exports[`renders components/popconfirm/demo/locale.tsx correctly 1`] = `
<button
  class="g-btn css-var-test-id g-btn-default g-btn-dangerous g-btn-color-dangerous g-btn-varig-outlined"
  type="button"
>
  <span>
    Delete
  </span>
</button>
`;

exports[`renders components/popconfirm/demo/placement.tsx correctly 1`] = `
<div
  class="demo g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-vertical"
>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
    style="white-space:nowrap"
  >
    <button
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-space-between"
    style="width:432px"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          LT
        </span>
      </button>
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Left
        </span>
      </button>
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          LB
        </span>
      </button>
    </div>
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          RT
        </span>
      </button>
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Right
        </span>
      </button>
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          RB
        </span>
      </button>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
    style="white-space:nowrap"
  >
    <button
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/popconfirm/demo/promise.tsx correctly 1`] = `
<button
  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
  type="button"
>
  <span>
    Open Popconfirm with Promise
  </span>
</button>
`;

exports[`renders components/popconfirm/demo/render-panel.tsx correctly 1`] = `
Array [
  <div
    class="g-popover g-popover-pure g-popover-placement-top g-popconfirm css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
              <div
                class="g-popconfirm-description"
              >
                Does this look good?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-bottomRight g-popconfirm css-var-test-id"
    style="width:250px"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
      style="width:250px"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
              <div
                class="g-popconfirm-description"
              >
                Does this look good?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-top g-popconfirm css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-top g-popconfirm css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
              <div
                class="g-popconfirm-description"
              >
                Does this look good?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popconfirm/demo/shift.tsx correctly 1`] = `
<div
  style="width:300vw;height:300vh;display:flex;align-items:center;justify-content:center"
>
  <button
    class="g-btn g-btn-primary g-popover-open"
    type="button"
  >
    <span>
      Scroll The Window
    </span>
  </button>
  <div
    class="g-popover g-popconfirm g-popover-placement-top"
    style="--arrow-x:0px;--arrow-y:0px;left:-1000vw;top:-1000vh;right:auto;bottom:auto;box-sizing:border-box"
  >
    <div
      class="g-popover-arrow"
      style="position:absolute;bottom:0;left:0"
    />
    <div
      class="g-popover-content"
    >
      <div
        class="g-popover-inner"
        role="tooltip"
      >
        <div
          class="g-popover-inner-content"
        >
          <div
            class="g-popconfirm-inner-content"
          >
            <div
              class="g-popconfirm-message"
            >
              <span
                class="g-popconfirm-message-icon"
              >
                <span
                  aria-label="exclamation-circle"
                  class="gicon gicon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="g-popconfirm-message-text"
              >
                <div
                  class="g-popconfirm-title"
                >
                  Thanks for using antd. Have a nice day !
                </div>
              </div>
            </div>
            <div
              class="g-popconfirm-buttons"
            >
              <button
                class="g-btn g-btn-default g-btn-sm"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="g-btn g-btn-primary g-btn-sm"
                type="button"
              >
                <span>
                  OK
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/popconfirm/demo/style-class.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-gap-medium"
>
  <button
    class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
    type="button"
  >
    <span>
      Object Style
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Function Style
    </span>
  </button>
</div>
`;

exports[`renders components/popconfirm/demo/wireframe.tsx correctly 1`] = `
Array [
  <div
    class="g-popover g-popover-pure g-popover-placement-top g-popconfirm css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-bottomRight g-popconfirm css-var-test-id"
    style="width:250px"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
      style="width:250px"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
